--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,66 @@
-# Compiled class file
+### Kotlin
 *.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
+*.iml
+*.log
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+### Gradle
+.gradle/
+build/
+!gradle/wrapper/gradle-wrapper.jar
+.gradle-cache/
+gradle-app.setting
 
-# Kotlin Gradle plugin data, see https://kotlinlang.org/docs/whatsnew20.html#new-directory-for-kotlin-data-in-gradle-projects
-.kotlin/
+# Ignore Gradle daemon logs
+**/gradle/daemon/
+**/gradle/native/
+**/gradle/worker/
+**/gradle/caches/
+
+### IntelliJ IDEA
+.idea/
+*.iws
+*.ipr
+*.iml
+out/
+.idea_modules/
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/dictionaries
+.idea/httpRequests
+.idea/.idea_modules/
+.idea/kotlinc.xml
+
+### OS-specific
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+
+# Logs
+*.log
+logs/
+**/logs/
+
+### Test reports
+/test-results/
+/test-report/
+/coverage/
+/jacoco/
+
+### Local environment
+.env
+.env.*
+.vscode/
+*.local
